- CHG: Updated zxing libraries to version 3.3.1. - ADD: Added option to restrict barcode search to specific type during the bulk image renaming process. - ADD: Added option to switch between fast and accurate mode during the bulk image renaming process.

--- a/res/messages.properties
+++ b/res/messages.properties
@@ -37,6 +37,7 @@ tooltip.button.image.open=Open image
 button.pdf=Save PDF
 button.clear=Clear
 button.add=Add
+dialog.button.run=Run
 menu.main.file=&File
 menu.main.file.import=&Import
 menu.main.file.import.txt.file=From .&txt file
@@ -95,6 +96,10 @@ setting.barcode.rename.duplicate.pick.first=Pick first barcode
 setting.barcode.rename.missing.title=On missing barcode
 setting.barcode.rename.missing.skip=Skip image
 setting.barcode.rename.missing.copy=Copy original
+setting.barcode.rename.restrict.type.title=Restrict to barcode type
+setting.barcode.rename.restrict.type.accept.all=Accept all types
+setting.barcode.rename.try.hard.title=''Try harder'' mode
+setting.barcode.rename.try.hard.text=Enable (Optimize for accuracy, not speed)
 dialog.rename.image.file.title=Select source and target
 dialog.rename.image.file.description=Please select the folder containing the images as well as the folder where you want the renamed images to be stored.
 dialog.rename.image.options.title=Select options
