--- a/res/messages_de.properties
+++ b/res/messages_de.properties
@@ -37,6 +37,7 @@ tooltip.button.image.open=Bild öffnen
 button.pdf=PDF speichern
 button.clear=Leeren
 button.add=Hinzufügen
+dialog.button.run=Start
 menu.main.file=&Datei
 menu.main.file.import=&Importieren
 menu.main.file.import.txt.file=Aus .&txt Datei
@@ -99,6 +100,10 @@ setting.barcode.rename.duplicate.pick.first=Ersten Barcode wählen
 setting.barcode.rename.missing.title=Bei fehlendem Barcode
 setting.barcode.rename.missing.skip=Bild überspringen
 setting.barcode.rename.missing.copy=Original kopieren
+setting.barcode.rename.restrict.type.title=Auf Barcodetyp beschränken
+setting.barcode.rename.restrict.type.accept.all=Akzeptiere alle Typen
+setting.barcode.rename.try.hard.title=''Streng dich an''-Modus
+setting.barcode.rename.try.hard.text=Aktiviert (Optimiert für Genauigkeit, nicht Geschwindigkeit)
 dialog.rename.image.title=Massen-Bilder-Umbenenner
 dialog.rename.image.source=Quelle
 dialog.rename.image.target=Ziel
